@startuml Figure9_Diagramme_Classes_Gestion_Utilisateurs

' ==============================================================================
' Figure 9 : Diagramme de classes – Gestion des utilisateurs
' ==============================================================================

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam packageStyle rectangle

skinparam class {
    BackgroundColor #FFFFFF
    BorderColor #2B6CB0
    HeaderBackgroundColor #EBF4FF
    ArrowColor #2D3748
    FontName Arial
}

class User {
    - id : bigint
    - nom : string
    - prenom : string
    - email : string
    - telephone : string
    - mot_de_passe : string
    - role : RoleEnum
    + administrateur()
    + particulier()
    + agence()
    + isAdmin()
    + isParticulier()
    + isAgence()
    + getFullName()
}

class Administrateur {
    - id : bigint
    - user_id : bigint
    - fonction : string
    + user()
    + validations()
}

class Agence {
    - id : bigint
    - user_id : bigint
    - nom_agence : string
    - adresse : string
    - quartier_id : bigint
    - description : text
    - logo : string
    - statut_validation : boolean
    - bloque : boolean
    + user()
    + quartier()
    + biens()
    + documents()
    + abonnements()
    + propositions()
    + rendezVous()
    + evaluations()
    + creneaux()
}

class Particulier {
    - id : bigint
    - user_id : bigint
    - profession : string
    - adresse : string
    - quartier_id : bigint
    + user()
    + quartier()
    + demandes()
    + propositions()
    + rendezVous()
    + evaluations()
}

class Quartier {
    - id : bigint
    - nom : string
    - ville : string
    - est_actif : boolean
    + particuliers()
    + agences()
}

' --- Relations & Multiplicités ---
User "1" -- "0..1" Administrateur
User "1" -- "0..1" Agence
User "1" -- "0..1" Particulier

Quartier "1" -- "0..*" Agence
Quartier "1" -- "0..*" Particulier

@enduml
